<resources>
    <string name="app_name">eventsapp</string>
    <string name="title_home">Home</string>
    <string name="title_events">Events</string>
    <string name="title_schedule">Schedule</string>
    <string name="txtvPleaseBePatient">Please be patient while</string>
    <string name="txtvLoading">Loading............</string>
    <string name="default_date">Yesterday</string>
    <string name="sub_title">Sub title</string>
    <string name="title">Title</string>
    <string name="video_url">Video url</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="Play">Play</string>
    <string name="default_time">0:00</string>
    <string name="title_video">Video Player</string>
</resources>